// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField it renders a form field wth a label and icons 1`] = `
.c1 {
  margin-top: 0px;
  width: 100%;
  text-align: center;
}

.c5 {
  margin-left: -32px;
  margin-top: 8px;
}

.c2 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c4::-webkit-input-placeholder {
  color: #687B8E;
}

.c4::-moz-placeholder {
  color: #687B8E;
}

.c4:-ms-input-placeholder {
  color: #687B8E;
}

.c4::placeholder {
  color: #687B8E;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0 c1"
    width={1}
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c4"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c5"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a both icons 1`] = `
.c1 {
  margin-top: 0px;
  width: 100%;
  text-align: center;
}

.c5 {
  margin-left: -32px;
  margin-top: 8px;
}

.c2 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
  padding-right: 40px;
}

.c4::-webkit-input-placeholder {
  color: #687B8E;
}

.c4::-moz-placeholder {
  color: #687B8E;
}

.c4:-ms-input-placeholder {
  color: #687B8E;
}

.c4::placeholder {
  color: #687B8E;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0 c1"
    width={1}
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c4"
      id="with-both-icons"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c5"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputField it renders a with a conditional right side icon 1`] = `
.c1 {
  margin-top: 0px;
  width: 100%;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 8px;
}

.c2::-webkit-input-placeholder {
  color: #687B8E;
}

.c2::-moz-placeholder {
  color: #687B8E;
}

.c2:-ms-input-placeholder {
  color: #687B8E;
}

.c2::placeholder {
  color: #687B8E;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0 c1"
    width={1}
  >
    <input
      aria-label={null}
      className="c2"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a left side icon 1`] = `
.c1 {
  margin-top: 0px;
  width: 100%;
  text-align: center;
}

.c2 {
  margin-left: 8px;
  margin-right: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c4 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 40px;
}

.c4::-webkit-input-placeholder {
  color: #687B8E;
}

.c4::-moz-placeholder {
  color: #687B8E;
}

.c4:-ms-input-placeholder {
  color: #687B8E;
}

.c4::placeholder {
  color: #687B8E;
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0 c1"
    width={1}
  >
    <div
      className="c2"
    >
      <svg
        className="c3"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
    <input
      aria-label={null}
      className="c4"
      id="with-left-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
  </div>
</div>
`;

exports[`InputField it renders a with a right side icon 1`] = `
.c1 {
  margin-top: 0px;
  width: 100%;
  text-align: center;
}

.c3 {
  margin-left: -32px;
  margin-top: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: block;
  width: 100%;
  font-family: inherit;
  font-size: 14px;
  background-color: transparent;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  border-color: #d1d6db;
  padding-top: 14px;
  padding-bottom: 14px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #d1d6db;
  box-shadow: 0 0 0 0 #d1d6db;
  padding-left: 8px;
  padding-right: 40px;
}

.c2::-webkit-input-placeholder {
  color: #687B8E;
}

.c2::-moz-placeholder {
  color: #687B8E;
}

.c2:-ms-input-placeholder {
  color: #687B8E;
}

.c2::placeholder {
  color: #687B8E;
}

.c2::-ms-clear {
  display: none;
}

.c2:focus {
  outline: 0;
  border-color: #007aff;
  box-shadow: 0 0 0 1px #007aff;
}

<div
  className=""
>
  <div
    className="c0 c1"
    width={1}
  >
    <input
      aria-label={null}
      className="c2"
      id="with-right-icon"
      onChange={[Function]}
      style={
        Object {
          "paddingBottom": "14px",
          "paddingTop": "14px",
          "transition": "padding-top 0.1s, padding-bottom 0.1s",
        }
      }
      width={1}
    />
    <div
      className="c3"
    >
      <svg
        className="c4"
        fill="currentcolor"
        height={24}
        viewBox="0 0 24 24"
        width={24}
      >
        <path
          d="M20,4H4C2.9,4,2,4.9,2,6v12c0,1.1,0.9,2,2,2h16c1.1,0,2-0.9,2-2V6C22,4.9,21.1,4,20,4z M20,8
	l-8,5L4,8V6l8,5l8-5V8z"
        />
      </svg>
    </div>
  </div>
</div>
`;
